--- a/back_end/functions/package.json
+++ b/back_end/functions/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.6.0",
+    "node": "^18.20.2",
     "nodemon": "^3.0.3"
   },
   "nodemonConfig": {
